// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'github'
  | 'twitter'
  | 'line'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
  | 'administrator'

/**
 * Data API (REST) response
 * @see https://learn.microsoft.com/azure/data-api-builder/rest
 */
type RestResult<T> = { value: T[] }
/**
 * Data API (GraphQL) response
 * @see https://learn.microsoft.com/azure/data-api-builder/graphql
 */
type GraphQLResult<TEntity extends {}> = { data: TEntity }
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'

/**
 * Data API (REST) response
 * @see https://learn.microsoft.com/azure/data-api-builder/rest
 */
type RestResult<T> = { value: T[] }
/**
 * Data API (GraphQL) response
 * @see https://learn.microsoft.com/azure/data-api-builder/graphql
 */
type GraphQLResult<TEntity extends {}> = { data: TEntity }
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { customRoles: [], authProviders: [ 'aad', 'github' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'aad'
  | 'github'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'

/**
 * Data API (REST) response
 * @see https://learn.microsoft.com/azure/data-api-builder/rest
 */
type RestResult<T> = { value: T[] }
/**
 * Data API (GraphQL) response
 * @see https://learn.microsoft.com/azure/data-api-builder/graphql
 */
type GraphQLResult<TEntity extends {}> = { data: TEntity }
"
`;
